WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33815
Crash when using DOMTimer from a detached frame
https://bugs.webkit.org/show_bug.cgi?id=33815
Summary
Crash when using DOMTimer from a detached frame
Alexey Proskuryakov
Reported
2010-01-18 16:20:30 PST
Patch forthcoming.
Attachments
proposed fix
(7.73 KB, patch)
2010-01-18 16:43 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-01-18 16:43:16 PST
Created
attachment 46862
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2010-01-18 16:54:01 PST
Committed revision 53439.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug