        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=33815
        Crash when using DOMTimer from a detached frame

        Test: fast/dom/Window/timer-null-script-execution-context.html

        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::setTimeout):
        (WebCore::JSDOMWindow::setInterval):
        * page/DOMWindow.h:
        * page/DOMWindow.idl:
        Make setTimer and setInterval raise an exception. It is not specified in HTML5, but both
        IE and Firefox do raise an exception in this situation, although different ones.

        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::setTimeout): Raise INVALID_ACCESS_ERR if script execution context is
        null (meaning that the window is detached).
        (WebCore::DOMWindow::setInterval): Ditto.
        (WebCore::DOMWindow::clearTimeout): Silently return early if there is no script execution
        context.
        (WebCore::DOMWindow::clearInterval): Ditto.
        Raise INVALID_ACCESS_ERR if script execution context is null (meaning .



Canonical link: https://commits.webkit.org/44840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53439 268f45cc-cd09-0410-ab3c-d52691b4dbfc