WebCore/page/DOMWindow.h
@@ -232,9 +232,9 @@ namespace WebCore {
         void resizeTo(float width, float height) const;
 
         // Timers
-        int setTimeout(ScheduledAction*, int timeout);
+        int setTimeout(ScheduledAction*, int timeout, ExceptionCode&);
         void clearTimeout(int timeoutId);
-        int setInterval(ScheduledAction*, int timeout);
+        int setInterval(ScheduledAction*, int timeout, ExceptionCode&);
         void clearInterval(int timeoutId);
 
         // Events
